fix gap between icon and text also on size 2
SRFCMS-7376

--- a/source/_patterns/10-atoms/form/button.scss
+++ b/source/_patterns/10-atoms/form/button.scss
@@ -39,7 +39,7 @@ $button-height: 48px;
     width: auto;
 
     .button-icon {
-      margin: -6px 12px -6px 0;
+      margin: -6px 8px -6px 0;
     }
   }
 
